added modifications to use external bank
